--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #database config
-spring.datasource.url=jdbc:mysql://rm-wz92c1giqcv2fxr7yo.mysql.rds.aliyuncs.com/repair_web
-spring.datasource.username=crland
-spring.datasource.password=keepCR0755
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306
+spring.datasource.username=root
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #json date fomat
