--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #database config
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=my-secret-pw
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 #json date fomat
